src/surface/card/compiler/tests/snapshots/synrepo__surface__card__compiler__tests__basic__symbol_card_tiny.snap
---
source: src/surface/card/compiler/tests/basic.rs
expression: tiny
---
{
  "symbol": "sym_e1e7c2532efb79ccfc6bb04fc9a23f3d",
  "name": "add",
  "qualified_name": "add",
  "defined_at": "src/lib.rs:31",
  "file_id": "file_b9153ba0bcc8814480efee97788f17da",
  "path": "src/lib.rs",
  "root_id": "primary",
  "is_primary_root": true,
  "root_kind": "primary",
  "root_label": "primary",
  "editable": true,
  "signature": "pub fn add(a: i32, b: i32) -> i32",
  "approx_tokens": 13,
  "context_accounting": {
    "budget_tier": "tiny",
    "token_estimate": 13,
    "raw_file_token_estimate": 25,
    "estimated_savings_ratio": 0.48,
    "source_hashes": [
      "b4356aa41bdf49e16928ee9ac7250734edf3783218a56fccac863c02c5994064"
    ],
    "stale": false,
    "truncation_applied": false
  },
  "source_store": "graph",
  "epistemic": "parser_observed",
  "commentary_state": "budget_withheld",
  "links_state": "budget_withheld"
}
